--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+    <title>offline on line</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+    <!--font import -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
+    </style>
   </head>
   <body>
-    <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
-    <div id="meter" style="width:1cm"></div>    
-    <script src="sketch.js"></script>
+      <div class="cursor"></div>
+      <div class="follower c-follower"></div>
+      <div id="wrapper">
+          <div id="contents">
+              <div id="tittle" class="text">
+                  offline on line
+              </div>
+              <video src="./src/515_1021_1.mp4" controls muted preload=“none”></video>
+              <div class="text">
+                  ▼本作品はスマートフォンで体験できます▼
+              </div>
+              <img src="./src/QR.png" alt="QR code"></img>
+          </div>
+          <footer class="text">© 2021</footer>
+      </div>
+      <!--script-->
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.1/TweenMax.min.js"></script>
+      <script src="cursor.js"></script>
   </body>
+
 </html>
