--- a/index.html
+++ b/index.html
@@ -4,26 +4,20 @@
     <title>offline on line</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <!--font import -->
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
-    </style>
+
   </head>
   <body>
       <div class="cursor"></div>
       <div class="follower c-follower"></div>
       <div id="wrapper">
           <div id="contents">
-              <div id="tittle" class="text">
-                  offline on line
-              </div>
+              <img src="./src/title.png" alt="offline on line" class="titleimage"></img>
               <video src="./src/515_1021_1.mp4" controls muted preload=“none”></video>
               <div class="text">
                   ▼本作品はスマートフォンで体験できます▼
               </div>
-              <img src="./src/QR.png" alt="QR code"></img>
+              <img src="./src/QR.png" alt="QR code" class="QR"></img>
           </div>
-          <footer class="text">© 2021</footer>
       </div>
       <!--script-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
