--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="wrapper">
           <div id="contents">
               <img src="./src/title.png" alt="offline on line" class="titleimage"></img>
-              <video src="./src/515_1021_1.mp4" controls muted preload=“none”></video>
+              <video src="./src/515_1021_1.mp4" autoplay muted preload=“none”></video>
               <div class="text">
                   ▼本作品はスマートフォンで体験できます▼
               </div>
