--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       <div class="follower c-follower"></div>
       <div id="wrapper">
           <div id="contents">
-              <img src="./src/title.png" alt="offline on line" class="titleimage"></img>
+              <img src="./src/title_wide.png" alt="offline on line" class="titleimage"></img>
+              <!--
               <video src="./src/515_1021_1.mp4" autoplay muted preload=“none”></video>
+              -->
               <div class="text">
                   ▼本作品はスマートフォンで体験できます▼
               </div>
