--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
       <div class="follower c-follower"></div>
       <div id="wrapper">
           <div id="contents">
-              <img src="./src/title_wide.png" alt="offline on line" class="titleimage"></img>
-              <!--
-              <video src="./src/515_1021_1.mp4" autoplay muted preload=“none”></video>
-              -->
-              <div class="text">
-                  ▼本作品はスマートフォンで体験できます▼
-              </div>
-              <img src="./src/QR.png" alt="QR code" class="QR"></img>
+              <img src="./src/pcToMobile.png" alt="offline on line" class="titleimage"></img>
           </div>
       </div>
       <!--script-->
